@@ -360,7 +360,7 @@ package Aspects is
    --  empty list or No_List.
 
    function Find_Aspect (Ent : Entity_Id; A : Aspect_Id) return Node_Id;
-   --  Find value of a given aspect from aspect list of entity.
+   --  Find value of a given aspect from aspect list of entity
 
    procedure Move_Aspects (From : Node_Id; To : Node_Id);
    --  Moves aspects from 'From' node to 'To' node. Has_Aspects (To) must be
